# SagaCraft

./: .gitignore  ACHIEVEMENTS.md  ADVENTURE_LIBRARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  DOCUMENTATION_STATUS.txt  EPIC_ROADMAP.md  FEATURE_COMPLETION_REPORT.md  FILE_ORGANIZATION_SUMMARY.md  LAUNCH.md  LAUNCHER_FIX_LOG.md  NEW_FEATURES_QUICK_START.md  NEW_FEATURES_SUMMARY.md  NEW_FILES_INDEX.md  ORGANIZATION_COMPLETE.txt  PHASE_IV_REPORT.md  PHASE_IX_REPORT.md  PHASE_VIII_REPORT.md  PHASE_VI_REPORT.md  PHASE_XI_FEATURES_REPORT.md  PHASE_X_REPORT.md  PROGRESS_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STRUCTURE.md  Play.sh  README.md  REFACTORING_GUIDE.md  START_HERE.md  Saga.py  Saga.sh  acs_engine_enhanced.py  commands_demo.txt  demo_adventure.json  pyproject.toml  quickstart.sh  sagacraft_engine.py  shattered_realms_demo.json  sitecustomize.py
adventures/: _temp_play.json  ballyhoo.json  colossal_cave.json  colossal_storyworks_showcase.json  hitchhikers_guide.json  hunt_the_wumpus.json  infinite_archive.json  leather_goddesses.json  mind_forever_voyaging.json  mindwheel.json  planetfall.json  visual_builder_sample.json  zork.json
config/: engine.json  game_settings.json  modding_state.json  recent_adventures.json
docs/: API_Reference.md  Development_Guide.md  Game_Design_Tips.md  Game_Designer_Manual.md  Installation_Guide.md  README.md  Technical_Reference.md  Tutorial.md  User_Manual.md
plugins/: achievements_plugin.py
release/: README.md  sagacraft_player
sagacraft_ide_gui/: Cargo.toml
sagacraft_ide_gui/src/: main.rs
(+196 files in other folders)
